--- a/po/es.po
+++ b/po/es.po
@@ -23,16 +23,16 @@ msgstr "404 Página no encontrada :("
 #: public/views/index.html
 msgid ""
 "<strong>insight</strong>  is an <a href=\"http://live.insight.is/\" target="
-"\"_blank\">open-source Bitcoin blockchain explorer</a> with complete REST "
+"\"_blank\">open-source Okcash blockchain explorer</a> with complete REST "
 "and websocket APIs that can be used for writing web wallets and other apps  "
-"that need more advanced blockchain queries than provided by bitcoind RPC.  "
+"that need more advanced blockchain queries than provided by okcashd RPC.  "
 "Check out the <a href=\"https://github.com/bitpay/insight-ui\" target=\"_blank"
 "\">source code</a>."
 msgstr ""
 "<strong>insight</strong>  es un <a href=\"http://live.insight.is/\" target="
-"\"_blank\">explorador de bloques de Bitcoin open-source</a> con un completo "
+"\"_blank\">explorador de bloques de Okcash open-source</a> con un completo "
 "conjunto de REST y APIs de websockets que pueden ser usadas para escribir "
-"monederos de Bitcoins y otras aplicaciones que requieran consultar un "
+"monederos de Okcashs y otras aplicaciones que requieran consultar un "
 "explorador de bloques.  Obtén el código en <a href=\"http://github.com/"
 "bitpay/insight\" target=\"_blank\">el repositorio abierto de Github</a>."
 
@@ -68,8 +68,8 @@ msgid "Best Block"
 msgstr "Mejor Bloque"
 
 #: public/views/status.html
-msgid "Bitcoin node information"
-msgstr "Información del nodo Bitcoin"
+msgid "Okcash node information"
+msgstr "Información del nodo Okcash"
 
 #: public/views/block.html
 msgid "Block"
@@ -90,11 +90,11 @@ msgstr "Bytes Serializados"
 
 #: public/views/includes/connection.html
 msgid ""
-"Can't connect to bitcoind to get live updates from the p2p network. (Tried "
-"connecting to bitcoind at {{host}}:{{port}} and failed.)"
+"Can't connect to okcashd to get live updates from the p2p network. (Tried "
+"connecting to okcashd at {{host}}:{{port}} and failed.)"
 msgstr ""
-"No se pudo conectar a bitcoind para obtener actualizaciones en vivo de la "
-"red p2p. (Se intentó conectar a bitcoind de {{host}}:{{port}} y falló.)"
+"No se pudo conectar a okcashd para obtener actualizaciones en vivo de la "
+"red p2p. (Se intentó conectar a okcashd de {{host}}:{{port}} y falló.)"
 
 #: public/views/includes/connection.html
 msgid "Can't connect to insight server. Attempting to reconnect..."
@@ -195,8 +195,8 @@ msgid "Last Block"
 msgstr "Último Bloque"
 
 #: public/views/status.html
-msgid "Last Block Hash (Bitcoind)"
-msgstr "Último Bloque Hash (Bitcoind)"
+msgid "Last Block Hash (Okcashd)"
+msgstr "Último Bloque Hash (Okcashd)"
 
 #: public/views/index.html
 msgid "Latest Blocks"
